[ticket/14229] fix paging spacing
PHPBB3-14229

--- a/phpBB/styles/prosilver/theme/common.css
+++ b/phpBB/styles/prosilver/theme/common.css
@@ -875,7 +875,7 @@ fieldset.fields1 dl.pmlist dd.recipients {
 /* Pagination in viewforum for multipage topics */
 .row .pagination {
 	display: block;
-	margin-top: -10px;
+	margin-top: -12px;
 }
 
 .row .pagination > ul {
