--- a/phpBB/styles/prosilver/theme/responsive.css
+++ b/phpBB/styles/prosilver/theme/responsive.css
@@ -281,7 +281,8 @@
 	}
 
 	.row .pagination {
-		margin-top: 0;
+		margin-top: 2px;
+		margin-bottom: 2px;
 	}
 
 	.row .pagination .ellipsis + li {
@@ -563,7 +564,8 @@
 
 @media (min-width: 701px) and (max-width: 950px) {
 	.row .pagination {
-		margin-top: 0;
+		margin-top: 2px;
+		margin-bottom: 2px;
 	}
 
 	ul.topiclist dt {
